# Slot-Engine

./: .gitignore  CMakeLists.txt  README.md  test_engine.py
assets/: README.md
assets/reels/: README.md
config/: README.md
docs/: log.txt
shaders/: README.md
src/: main.cpp
src/app/: README.md
src/render/: README.md
src/slot/: README.md  reel_strip.cpp  reel_strip.h  reel_strips.cpp  spin_evaluation.cpp  spin_evaluation.h
tests/: README.md  python_test.cpp  spin_simulation.py  tests.py
